# EEG-Experiments

./: .gitignore  README.md
rhythm-experiments/: Cargo.toml  brainflow_data
rhythm-experiments/src/: main.rs
