[package]
name = "rhythm-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.58.1"
libc = "0.2"
brainflow = { path = "../brainflow" }

[build-dependencies]
bindgen = "0.58.1"
cc = "1.0"